# serializer version: 1
# name: test_load_snapshot_data_computes_proper_field_versions[feature_version]
  '9a7207d5'
# ---
# name: test_load_snapshot_data_computes_proper_field_versions[field_versions]
  dict({
    'field1': '86c9112b',
    'field2': 'd3d95402',
  })
# ---
# name: test_load_snapshot_data_fallback_when_graph_reconstruction_fails[feature_version]
  'd088cc9d'
# ---
# name: test_load_snapshot_data_fallback_when_graph_reconstruction_fails[field_versions]
  dict({
    'field1': 'a7ebc9a5',
    'field2': 'a7444ec9',
  })
# ---
